--- a/Posicionamento CSS/style.css
+++ b/Posicionamento CSS/style.css
@@ -18,6 +18,11 @@ a {
     text-decoration: none;
 }
 
+p {
+    font-size: 1.25rem;
+    line-height: 1.3;
+}
+
 p,
 h1,
 h2,
@@ -32,6 +37,18 @@ span {
     line-height: 1.3;
 }
 
+ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+.header {
+    display: grid;
+    justify-items: center;
+    gap: 60px;
+}
+
 .menu {
     display: grid;
     grid-template-columns: 130px 130px 130px 130px;
@@ -40,12 +57,17 @@ span {
     padding-bottom: 50px;
 }
 
-.menu>a {
+.menu a {
+    display: block;
     background-color: #fff;
-    padding: 10px 20px;
-    text-align: center;
+    padding: 1rem 2rem;
     border-radius: 5px;
     color: black;
+    border: 2px solid transparent;
+}
+
+.menu a:hover {
+    border: 2px solid #e21
 }
 
 .principal {
@@ -65,16 +87,25 @@ span {
     justify-items: end;
 }
 
+.bloco1 h1 {
+    font-size: 2rem;
+}
 
-.stylebottom {
+
+.botao {
     background-color: #ee2211;
     color: #fff;
-    padding: 15px 30px;
+    padding: 1rem 2rem;
     border-radius: 5px;
     text-transform: uppercase;
 }
 
-.detalhe {
+.botao:hover {
+    background: #900;
+}
+
+.bloco1::before {
+    content: "";
     width: 60px;
     height: 4px;
     background: #e21;
@@ -84,12 +115,15 @@ span {
 }
 
 .vantagens {
-    font-size: 64px;
+    font-size: 4rem;
     text-align: end;
     padding: 40px;
     color: #c6c6c6;
     font-weight: bold;
+    background-image: url("imagens/onda.svg");
 }
+
+
 
 .destaque {
     display: inline;
@@ -98,4 +132,12 @@ span {
 .final {
     padding: 40px;
     background-color: #fff;
+}
+
+.final li:nth-child(odd){
+    background-color: #f7f7f7;
+}
+
+.final li:hover {
+    border-left: 4px solid #e21;
 }
