--- a/Doceria/style.css
+++ b/Doceria/style.css
@@ -1,6 +1,8 @@
 body {
+    font-family: Arial, Helvetica, sans-serif;
     display: grid;
     justify-items: center;
+    background-color: #fdcde0;
 }
 
 header {
@@ -9,7 +11,7 @@ header {
     justify-items: center;
 }
 
-img{
+img {
     display: block;
     max-width: 100%;
 }
@@ -20,14 +22,35 @@ ul {
     padding: 0px;
 }
 
+a {
+    text-decoration: none;
+}
+
 .logo {
-    /* position: fixed; */
-    height: 50%;
+    margin-top: 40px;
+    height: 150px;
 }
 
 .menu {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
-    justify-content: center;
+    justify-items: center;
+}
+
+.menu a {
+    font-weight: bold;
+    color: black;
+    background: #a1ccb9;
+    padding: 1rem 2rem;
+    border-radius: 5px;
+    text-transform: uppercase;
+    border: 2px solid #fdcde0;
+    color: white;
+
+}
+
+.menu a:hover {
+    border: 2px solid #fa82b2;
+    color: #ff0065;
 }
